--- a/pomodoro.ui
+++ b/pomodoro.ui
@@ -47,7 +47,7 @@
      <enum>QFrame::Raised</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frame_2">
@@ -201,10 +201,10 @@ background-color: #df785f;
      <widget class="QLabel" name="label_interval">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>170</y>
-        <width>131</width>
-        <height>16</height>
+        <x>100</x>
+        <y>168</y>
+        <width>161</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -215,22 +215,6 @@ background-color: #df785f;
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-     <widget class="QCheckBox" name="skip_pauses">
-      <property name="geometry">
-       <rect>
-        <x>136</x>
-        <y>193</y>
-        <width>89</width>
-        <height>18</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color:	#d0d0d0;</string>
-      </property>
-      <property name="text">
-       <string>Pular pausas</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_hours_left">
@@ -267,12 +251,27 @@ background-color: #df785f;
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <widget class="QCheckBox" name="skip_pauses">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>190</y>
+         <width>101</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color:	#d0d0d0;</string>
+       </property>
+       <property name="text">
+        <string>Pular pausas</string>
+       </property>
+      </widget>
      </widget>
      <zorder>frame_4</zorder>
      <zorder>frame_2</zorder>
      <zorder>label_hours_left</zorder>
      <zorder>label_interval</zorder>
-     <zorder>skip_pauses</zorder>
      <zorder>start_pomodoro</zorder>
     </widget>
     <widget class="QWidget" name="page_2">
@@ -391,6 +390,24 @@ QProgressBar::chunk {
          <width>321</width>
          <height>16</height>
         </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="session_label">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>20</y>
+         <width>221</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel {
+	color: #d0d0d0;
+}</string>
        </property>
        <property name="text">
         <string/>
@@ -579,6 +596,16 @@ background-color:	#4F4F57;
        </layout>
       </item>
      </layout>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>230</y>
+       <width>113</width>
+       <height>26</height>
+      </rect>
+     </property>
     </widget>
    </widget>
   </widget>
